--- a/index.html
+++ b/index.html
@@ -161,6 +161,78 @@
 							<div class="overview__rating-count">611 votes</div>
 						</div>
 					</div>
+
+					<div class="detail">
+						<div class="description">
+							<p class="paragraph">
+								Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+								Repellat, laboriosam. Delectus, eligendi soluta aspernatur,
+								quaerat repellat dicta mollitia nisi sed obcaecati eaque rem,
+								atque consectetur nesciunt corporis at unde sapiente.
+							</p>
+							<p class="paragraph">
+								Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+								Repellat, laboriosam. Delectus, eligendi soluta aspernatur.
+							</p>
+							<ul class="list">
+								<li class="list__item">
+									Close to the beach
+								</li>
+								<li class="list__item">
+									Breakfast included
+								</li>
+								<li class="list__item">
+									Free airport shuttle
+								</li>
+								<li class="list__item">
+									Free wifi in all rooms
+								</li>
+								<li class="list__item">
+									Air conditioning and heating
+								</li>
+								<li class="list__item">
+									Pets allowed
+								</li>
+								<li class="list__item">
+									We speak all languages
+								</li>
+								<li class="list__item">
+									Perfect for families
+								</li>
+							</ul>
+							<div class="recommend">
+								<p class="recommend__count">
+									Lucy and 3 other friends recommend this hotel
+								</p>
+								<div class="recommend__friends">
+									<img
+										src="img/user-3.jpg"
+										alt="friends1"
+										class="recommend__photo"
+									/>
+									<img
+										src="img/user-4.jpg"
+										alt="friends2"
+										class="recommend__photo"
+									/>
+									<img
+										src="img/user-5.jpg"
+										alt="friends3"
+										class="recommend__photo"
+									/>
+									<img
+										src="img/user-6.jpg"
+										alt="friends4"
+										class="recommend__photo"
+									/>
+								</div>
+							</div>
+						</div>
+
+						<div class="user-reviews">
+							User Reviews
+						</div>
+					</div>
 				</main>
 			</div>
 		</div>
