--- a/index.html
+++ b/index.html
@@ -230,8 +230,56 @@
 						</div>
 
 						<div class="user-reviews">
-							User Reviews
+							<figure class="review">
+								<blockquote class="review__text">
+									Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+									Possimus fugiat ut, eveniet nobis qui dignissimos eius totam
+									nobis qui dignissimos eius totam.
+								</blockquote>
+								<figcaption class="review__user">
+									<img
+										src="img/user-1.jpg"
+										alt="user 1"
+										class="review__photo"
+									/>
+									<div class="review__user-box">
+										<p class="review__user-name">Nick Smith</p>
+										<p class="review__user-date">07th March, 2020</p>
+									</div>
+									<div class="review__rating">7.8</div>
+								</figcaption>
+							</figure>
+
+							<figure class="review">
+								<blockquote class="review__text">
+									Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+									Possimus fugiat ut, eveniet nobis qui dignissi.
+								</blockquote>
+								<figcaption class="review__user">
+									<img
+										src="img/user-2.jpg"
+										alt="user 2"
+										class="review__photo"
+									/>
+									<div class="review__user-box">
+										<p class="review__user-name">Mary Thomas</p>
+										<p class="review__user-date">06th March, 2020</p>
+									</div>
+									<div class="review__rating">8.9</div>
+								</figcaption>
+							</figure>
+
+							<button class="btn-inline">Show all <span>&rarr;</span></button>
 						</div>
+					</div>
+					<div class="cta">
+						<h2 class="cta__book-now">
+							Good News! We have 4 free rooms for your selected dates!
+						</h2>
+						<button class="btn">
+							<span class="btn__visible">Book Now</span>
+							<span class="btn__invisible">Only 4 rooms left</span>
+						</button>
 					</div>
 				</main>
 			</div>
